# Solitaire3TurboEdition

./: .gitignore  CMakeLists.txt  Main.qml  README.md  app.cpp  app.h  card.cpp  card.h  gamecontrol.cpp  gamecontrol.h  main.cpp  res.qrc
